First test and remove OpenAPI keys

--- a/docs/remove_account_site/manifest.json
+++ b/docs/remove_account_site/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "food_stock_web",
-    "short_name": "food_stock_web",
+    "name": "FoodStock",
+    "short_name": "FoodStock",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
